# robot_prediciton

./: 2020-12-28-14_35_16 Circle2.npy  2020-12-28-14_39_35 Line1.npy  2020-12-28-14_44_23 Line1.npy  2020-12-28-14_46_10 Line1.npy  2020-12-28-14_47_36 Line1.npy  2020-12-28-14_48_40 Line1.npy  2021-01-11-11_20_12 Turning2.npy  2021-01-11-11_27_25 Turning2.npy  2021-01-11-12_14_35 Turning2.npy  2021-01-11-12_17_48 Turning2.npy  2021-01-11-12_20_59 Turning2.npy  2021-01-11-12_25_42 Turning2.npy  2021-01-11-12_31_36 Turning2.npy  2021-01-11-12_37_41 Turning2.npy  2021-01-11-12_39_08 Turning2.npy  2021-01-11-12_43_16 Turning2.npy  2021-01-11-12_51_05 Turning2.npy  CMakeLists.txt  Kalman.py  collectData.py  fromNumpytoCsv.py  getPredictionData.py  model.py  mu.npy  my-model-test.pt  my-model-test1.pt  offlinePrediction.py  onlinePrediction.py  package.xml  plotData.py  predict_onebyone.py  save.npy  sig.npy  testButter.py  testPath.txt  train.py  trainPath.txt  utils.py
CSV/: 2020-12-28-16_47_36 Circle1.csv  2020-12-28-16_49_52 Circle1.csv  2020-12-28-16_52_03 Cricle1.csv  2020-12-28-16_54_01 Circle1.csv  2020-12-28-16_57_41 Circle1.csv  2020-12-28-16_59_23 Circle1.csv  2020-12-28-17_01_46 Circle1.csv  2020-12-28-17_03_27 Circle1.csv  2020-12-28-17_05_52 Circle1.csv  2020-12-28-17_07_24 Circle1.csv  2020-12-28-17_14_54 Circle2.csv  2020-12-28-17_17_06 Circle2.csv  2020-12-28-17_18_54 Circle2.csv  2020-12-28-17_20_54 Circle2.csv  2020-12-28-17_24_01 Circle2.csv  2020-12-28-17_25_50 Circle2.csv  2020-12-28-19_31_28 Circle2.csv  2020-12-28-19_33_33 Circle2.csv  (+111 more)
(+755 files in other folders)
